--- a/api/package.json
+++ b/api/package.json
@@ -14,9 +14,11 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^5.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0"
