--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
+    "react-select": "^5.7.3",
     "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
